Opened 13 years ago

Closed 13 years ago

#2163 closed defect (fixed)

Option channel_layout does not work anymore

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: ffmpeg
Version: git-master Keywords: regression
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

-channel_layout is broken since af4b1c0 / 77bd1bc
The following two command lines produce identical output files:

$ ffmpeg -channel_layout 2.1 -ac 3 -f u8 -i /dev/zero -t 1 out21.wav
ffmpeg version N-49070-g098d389 Copyright (c) 2000-2013 the FFmpeg developers
  built on Jan 21 2013 12:27:07 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52. 15.100 / 52. 15.100
  libavcodec     54. 90.100 / 54. 90.100
  libavformat    54. 61.101 / 54. 61.101
  libavdevice    54.  3.102 / 54.  3.102
  libavfilter     3. 32.101 /  3. 32.101
  libswscale      2.  2.100 /  2.  2.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  2.100 / 52.  2.100
[u8 @ 0x28be220] max_analyze_duration 5000000 reached at 5015510 microseconds
[u8 @ 0x28be220] Estimating duration from bitrate, this may be inaccurate
Guessed Channel Layout for  Input Stream #0.0 : 2.1
Input #0, u8, from '/dev/zero':
  Duration: N/A, bitrate: 1058 kb/s
    Stream #0:0: Audio: pcm_u8, 44100 Hz, 2.1, u8, 1058 kb/s
Output #0, wav, to 'out21.wav':
  Metadata:
    ISFT            : Lavf54.61.101
    Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 44100 Hz, 2.1, s16, 2116 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (pcm_u8 -> pcm_s16le)
Press [q] to stop, [?] for help
size=     264kB time=00:00:01.02 bitrate=2117.6kbits/s
video:0kB audio:264kB subtitle:0 global headers:0kB muxing overhead 0.037731%
$ ffmpeg -channel_layout 3.0 -ac 3 -f u8 -i /dev/zero -t 1 out30.wav
ffmpeg version N-49070-g098d389 Copyright (c) 2000-2013 the FFmpeg developers
  built on Jan 21 2013 12:27:07 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52. 15.100 / 52. 15.100
  libavcodec     54. 90.100 / 54. 90.100
  libavformat    54. 61.101 / 54. 61.101
  libavdevice    54.  3.102 / 54.  3.102
  libavfilter     3. 32.101 /  3. 32.101
  libswscale      2.  2.100 /  2.  2.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  2.100 / 52.  2.100
[u8 @ 0x26c5220] max_analyze_duration 5000000 reached at 5015510 microseconds
[u8 @ 0x26c5220] Estimating duration from bitrate, this may be inaccurate
Guessed Channel Layout for  Input Stream #0.0 : 2.1
Input #0, u8, from '/dev/zero':
  Duration: N/A, bitrate: 1058 kb/s
    Stream #0:0: Audio: pcm_u8, 44100 Hz, 2.1, u8, 1058 kb/s
Output #0, wav, to 'out30.wav':
  Metadata:
    ISFT            : Lavf54.61.101
    Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 44100 Hz, 2.1, s16, 2116 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (pcm_u8 -> pcm_s16le)
Press [q] to stop, [?] for help
size=     264kB time=00:00:01.02 bitrate=2117.6kbits/s
video:0kB audio:264kB subtitle:0 global headers:0kB muxing overhead 0.037731%
$ ffmpeg -i out21.wav -i out30.wav
ffmpeg version N-49070-g098d389 Copyright (c) 2000-2013 the FFmpeg developers
  built on Jan 21 2013 12:27:07 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52. 15.100 / 52. 15.100
  libavcodec     54. 90.100 / 54. 90.100
  libavformat    54. 61.101 / 54. 61.101
  libavdevice    54.  3.102 / 54.  3.102
  libavfilter     3. 32.101 /  3. 32.101
  libswscale      2.  2.100 /  2.  2.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  2.100 / 52.  2.100
Input #0, wav, from 'out21.wav':
  Metadata:
    encoder         : Lavf54.61.101
  Duration: 00:00:01.02, bitrate: 2117 kb/s
    Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 44100 Hz, 2.1, s16, 2116 kb/s
Input #1, wav, from 'out30.wav':
  Metadata:
    encoder         : Lavf54.61.101
  Duration: 00:00:01.02, bitrate: 2117 kb/s
    Stream #1:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 44100 Hz, 2.1, s16, 2116 kb/s
At least one output file must be specified

Change History (1)

comment:1 by Carl Eugen Hoyos, 13 years ago

Resolution: fixed
Status: newclosed

Fixed by Matthieu Bouron.

Note: See TracTickets for help on using tickets.