ffmpeg: fix broken channel_layout option

Fixes ticket #2163.

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 5a67e30b1c71dc0a84779b543d95ca20faa8cbed)